<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/suggestion1Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/suggestion1IdText"
            android:text="@string/suggestion1_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/suggestion1LoginText"
            android:text="@string/suggestion1_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/suggestion1UrlText"
            android:text="@string/suggestion1_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/suggestion2Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/suggestion1Layout"
        android:padding="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/suggestion2IdText"
            android:text="@string/suggestion2_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/suggestion2LoginText"
            android:text="@string/suggestion2_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/suggestion2UrlText"
            android:text="@string/suggestion2_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/suggestion3Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/suggestion2Layout"
        android:padding="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/suggestion3IdText"
            android:text="@string/suggestion3_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/suggestion3LoginText"
            android:text="@string/suggestion3_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/suggestion3UrlText"
            android:text="@string/suggestion3_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_refresh" />

    <Button
        android:id="@+id/closeSuggestion1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/button_close" />

    <Button
        android:id="@+id/closeSuggestion2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/suggestion1Layout"
        android:layout_alignLeft="@+id/closeSuggestion1Button"
        android:layout_alignStart="@+id/closeSuggestion1Button"
        android:text="@string/button_close" />

    <Button
        android:id="@+id/closeSuggestion3Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/suggestion2Layout"
        android:layout_alignLeft="@+id/closeSuggestion1Button"
        android:layout_alignStart="@+id/closeSuggestion1Button"
        android:text="@string/button_close" />

</RelativeLayout>
